Test GitHub integration - add deployment verification comment

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyL.Zip - Cloud Run Deployment</title>
+    <title>ZIP-MYL-WWW</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- GitHub Integration Test - Auto-deploy on commit -->
     <header>
         <h1>🚀 MyL.Zip</h1>
         <p>Google Cloud Run Deployment with GitHub Integration</p>
+        <!-- Test: GitHub Integration Working - Auto-deploy on commit -->
     </header>
     
     <main>
