Make setup wizard link more prominent on main page

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
         <section class="hero">
             <h2>🚀 Google Cloud Run Deployment</h2>
             <p>This site is automatically deployed using Google Cloud Run with GitHub integration.</p>
+            <div style="margin-top: 2rem;">
+                <a href="setup-wizard.html" class="btn btn-primary" style="background: #27ae60; font-size: 1.2rem; padding: 1.2rem 2.5rem;">
+                    🚀 Launch Setup Wizard
+                </a>
+            </div>
         </section>
         
         <section class="features">
@@ -38,6 +43,7 @@
             <h2>🚀 Get Started with Zip MyL</h2>
             <p>Set up your SSL certificate and extension access with our easy-to-use wizard.</p>
             <a href="setup-wizard.html" class="btn btn-primary">Launch Setup Wizard</a>
+            <p style="margin-top: 1rem; font-size: 0.9rem; color: #95a5a6;">Direct link: <a href="setup-wizard.html" style="color: #3498db;">setup-wizard.html</a></p>
         </section>
     </main>
     
