Implement transparent proxy architecture: myl.zip now proxies to zaido.org

--- a/hostgator/staging-deploy/index.html
+++ b/hostgator/staging-deploy/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZIP-MYL-WWW</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -51,6 +51,6 @@
         <p>&copy; 2024 ZIP-MYL-WWW. Deployed to Google Cloud Run</p>
     </footer>
     
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
