Add developer console info for proxy codebase identification

--- a/src/index.html
+++ b/src/index.html
@@ -35,12 +35,27 @@
             text-decoration: underline;
         }
     </style>
+    <script>
+        // Console info for developers
+        console.log('🚀 [PROXY] MyL.Zip Proxy Layer Active');
+        console.log('📋 [INFO] This is the transparent proxy codebase');
+        console.log('🔗 [TARGET] Proxying to: https://zaido.org');
+        console.log('📝 [NOTE] In other deployments, this may be a unique codebase');
+        console.log('🔄 [STATUS] Auto-redirecting to staging environment...');
+    </script>
 </head>
 <body>
     <div class="container">
         <h1>🚀 MyL.Zip</h1>
         <p>Redirecting to staging environment...</p>
         <p>If you're not redirected automatically, <a href="https://zaido.org">click here</a>.</p>
+        
+        <!-- Developer Notice -->
+        <div style="margin-top: 2rem; padding: 1rem; background: rgba(255, 255, 255, 0.2); border-radius: 8px; font-size: 0.9rem;">
+            <strong>🔧 Developer Info:</strong><br>
+            This is the transparent proxy codebase.<br>
+            Check browser console for deployment details.
+        </div>
     </div>
 </body>
 </html>
