Force deployment update for authentication endpoints

--- a/src/index.html
+++ b/src/index.html
@@ -35,14 +35,15 @@
             text-decoration: underline;
         }
     </style>
-    <script>
-        // Console info for developers
-        console.log('🚀 [PROXY] MyL.Zip Proxy Layer Active');
-        console.log('📋 [INFO] This is the transparent proxy codebase');
-        console.log('🔗 [TARGET] Proxying to: https://zaido.org');
-        console.log('📝 [NOTE] In other deployments, this may be a unique codebase');
-        console.log('🔄 [STATUS] Auto-redirecting to staging environment...');
-    </script>
+            <script>
+            // Console info for developers
+            console.log('🚀 [PROXY] MyL.Zip Proxy Layer Active - Updated');
+            console.log('📋 [INFO] This is the transparent proxy codebase');
+            console.log('🔗 [TARGET] Proxying to: https://zaido.org');
+            console.log('📝 [NOTE] In other deployments, this may be a unique codebase');
+            console.log('🔄 [STATUS] Auto-redirecting to staging environment...');
+            console.log('🔐 [AUTH] Authentication endpoints served locally');
+        </script>
 </head>
 <body>
     <div class="container">
